--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.savestreak">
+    package="com.example.myapplication">
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
@@ -9,22 +9,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/mom_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.myapplication.MainActivity"
             android:label="@string/app_name">
 
         </activity>
 
         <activity
-            android:name=".LoginActivity"
+            android:name="com.example.myapplication.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PieChartActivity"
+            android:name="com.example.myapplication.PieChartActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,35 +43,39 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name="com.example.myapplication.SettingsActivity"
             android:label="@string/app_name">
 
         </activity>
 
-        <receiver android:name=".SmsReceiver">
+        <receiver android:name="com.example.myapplication.SmsReceiver">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
         </receiver>
-        <service android:name=".IncrementService"
+        <service android:name="com.example.myapplication.IncrementService"
+            android:exported="false"
             android:permission="android.permission.BIND_JOB_SERVICE" >
 
         </service>
-        <service android:name=".UpdateHoursService">
 
-        </service>
+        <receiver android:process=":remote" android:name="com.example.myapplication.Alarm"></receiver>
 
-        <receiver android:process=":remote" android:name=".Alarm"></receiver>
-        <receiver android:name=".IncrementReceiver" android:process=":remote"
-            >
-
-        </receiver>
         <service
-            android:name=".JobServiceActivity"
+            android:name="com.example.myapplication.JobServiceActivity"
             android:label="Word service"
             android:permission="android.permission.BIND_JOB_SERVICE" >
 
         </service>
+
+        <receiver
+            android:name=".IncrementReceiver"
+            android:process=":remote" >
+        </receiver>
+        <service android:name=".StreakUpdaterService" />
+        <service
+            android:name=".MyTestService"
+            android:exported="false" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
