--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.joooonho:selectableroundedimageview:1.0.1'
+    implementation 'com.roomorama:caldroid:3.0.1'
     def room_version = "2.1.0-alpha04"
 
     implementation "androidx.room:room-runtime:$room_version"
