--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".Activities.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,6 +21,11 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.example.myapplication.Activities.MainActivity"
+            android:label="@string/app_name">
+
+        </activity>
+        <activity
+            android:name="com.example.myapplication.Activities.StartFragmentActivity"
             android:label="@string/app_name">
 
         </activity>
@@ -39,18 +45,38 @@
 
         </activity>
 
-        <receiver android:name="com.example.myapplication.Receivers.SmsReceiver">
-            <intent-filter>
+        <receiver android:enabled="true"
+            android:exported="true" android:name="com.example.myapplication.Receivers.SmsReceiver">
+            <intent-filter android:priority="1000">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
         </receiver>
-
-        <service android:name="com.example.myapplication.StreakUpdaterService" android:enabled="true"  />
-
+        <receiver android:name=".Receivers.DismissReceiver"/>
+        <service android:name="com.example.myapplication.Services.StreakUpdaterService"  android:enabled="true"  />
+   <service
+        android:name=".Services.BackgroundService"
+        android:exported="false"/>
+          <service
+        android:name="com.example.myapplication.Services.NotificationIntentService"
+        android:exported="false"/>
+        <service android:name=".Services.TestService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
         <receiver android:process=":remote"
-            android:name=".Alarm"
+            android:name="com.example.myapplication.Receivers.NotificationsReceiver"
             android:enabled="true"
-            android:exported="true" ></receiver>
+            ></receiver>
+        <receiver
+            android:name="com.example.myapplication.Receivers.Alarm"
+            android:enabled="true"
+            android:exported="false" ></receiver>
+        <receiver
+            android:name=".Receivers.ResponseBroadcastReceiver"
+            android:process=":remote" >
+        </receiver>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
