--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,12 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
-        android:name=".Activities.MyApp"
+        android:name="com.example.myapplication.Activities.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,6 +23,7 @@
         <activity
             android:name="com.example.myapplication.Activities.MainActivity"
             android:label="@string/app_name">
+
 
         </activity>
         <activity
@@ -60,29 +62,54 @@
 
         </activity>
 
+        <service android:name="com.example.myapplication.Services.NotificationIntentListener"
+            android:label="@string/service_label"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name="com.example.myapplication.Services.NotificationListeningService"
+            android:exported="false"/>
+
+        <service
+            android:name="com.example.myapplication.Services.NotificationIntentService"
+            android:exported="false"/>
+
+        <service
+            android:name="com.example.myapplication.Services.BackgroundService"
+            android:exported="false"/>
+
         <receiver android:enabled="true"
             android:exported="true" android:name="com.example.myapplication.Receivers.SmsReceiver">
             <intent-filter android:priority="1000">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
         </receiver>
-        <receiver android:name=".Receivers.DismissReceiver"/>
+        <receiver android:name="com.example.myapplication.Receivers.DismissReceiver"/>
         <service android:name="com.example.myapplication.Services.StreakUpdaterService"  android:enabled="true"  />
-   <service
-        android:name=".Services.BackgroundService"
-        android:exported="false"/>
-          <service
-        android:name="com.example.myapplication.Services.NotificationIntentService"
-        android:exported="false"/>
+
+        <!--<service android:name=".Services.NotificationIntentListener"-->
+            <!--android:label="NotificationIntent"-->
+            <!--android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.service.notification.NotificationListenerService" />-->
+            <!--</intent-filter>-->
+        <!--</service>-->
+
         <service
             android:name="com.example.myapplication.Services.AddExpenseService"
             android:exported="false"/>
-        <service android:name=".Services.TestService"
+
+        <service android:name="com.example.myapplication.Services.TestService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
             </intent-filter>
         </service>
+
         <receiver android:process=":remote"
             android:name="com.example.myapplication.Receivers.NotificationsReceiver"
             android:enabled="true"
@@ -92,7 +119,7 @@
             android:enabled="true"
             android:exported="false" ></receiver>
         <receiver
-            android:name=".Receivers.ResponseBroadcastReceiver"
+            android:name="com.example.myapplication.Receivers.ResponseBroadcastReceiver"
             android:process=":remote" >
         </receiver>
         <meta-data
